--- a/Website/package.json
+++ b/Website/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "website-project",
+  "name": "website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -22,17 +22,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-      "git.enableSmartCommit": true,
-      "git.autofetch": true,
-      "git.confirmSync": false,
-      "editor.formatOnSave": true,
-      "editor.defaultFormatter": "esbenp.prettier-vscode",
-      "terminal.integrated.shell.linux": "/bin/bash",
-      "git.ignoreLegacyWarning": true
-    }
+    "vite": "^6.2.0"
   }
-  
 }
